[feat] 기습 퀴즈 선착순 정책 적용